# DL-IndabaX-Uganda-Tutorials-2026

./: main.py  pyproject.toml
Day 01/Building Neural Networks from Scratch/: Building_Neural_Networks_From_Scratch.ipynb
Day 01/Mathematics for Machine Learning/: Vector_and_Matrices.ipynb
Day 01/Python and Data Science Fundamentals/: Python_For_Machine_Learning.ipynb
Day 02/MLOps Pipelines/: mlops_ultrasound_wandb_mobilenet.ipynb
Day 02/Natural Language Processing (RNNs, Transformers, Text Embeddings)/: speech_to_speech_translation_luganda_tutorial_Indaba.ipynb
Day 03/Build-with-llms/: .env.example  .gitignore  01-frontier-apis.ipynb  02-gradio.ipynb  03-chatbot.ipynb  04-tools.ipynb  ticket_prices.json
Day 03/Build-with-llms/lab/: 05_lab1.ipynb  05_lab2.ipynb  app.py
Day 03/Build-with-llms/lab/me/: summary.md
Day 03/Multimodal AI/: Multimodal AI.pptx
Day 03/Quantum Machine Learning/: Quantum_Machine_Learning_Indabax_Uganda_2026.ipynb
