[project]
name = "dl-indabax-uganda-tutorials-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.86.0",
    "beautifulsoup4>=4.14.3",
    "google-genai>=1.68.0",
    "gradio>=6.10.0",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.12",
    "litellm==1.82.1",
    "openai>=2.29.0",
    "pymupdf>=1.27.2.2",
    "pymupdf4llm>=1.27.2.2",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
